@@ -30,7 +30,7 @@
  * (C) Copyright 2006-2008, by Object Refinery Limited and Contributors.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
- * Contributor(s):   -;
+ * Contributor(s):   Andrew Mickish (patch 1868745);
  *
  * Changes
  * -------
@@ -39,6 +39,9 @@
  * 02-Aug-2007 : Fixed zooming bug, added support for margins (DG);
  * 14-Feb-2008 : Changed default minorTickCount to 9 - see bug report 
  *               1892419 (DG);
+ * 15-Feb-2008 : Applied a variation of patch 1868745 by Andrew Mickish to
+ *               fix a labelling bug when the axis appears at the top or
+ *               right of the chart (DG);
  * 
  */
 
@@ -515,6 +518,13 @@ public class LogAxis extends ValueAxis {
         List ticks = new ArrayList();
         Font tickLabelFont = getTickLabelFont();
         g2.setFont(tickLabelFont);
+    	TextAnchor textAnchor;
+        if (edge == RectangleEdge.TOP) {
+        	textAnchor = TextAnchor.BOTTOM_CENTER;
+        }
+        else {
+        	textAnchor = TextAnchor.TOP_CENTER;
+        }
         
         if (isAutoTickUnitSelection()) {
             selectAutoTickUnit(g2, dataArea, edge);
@@ -526,7 +536,7 @@ public class LogAxis extends ValueAxis {
             double v = calculateValue(current);
             if (range.contains(v)) {
                 ticks.add(new NumberTick(TickType.MAJOR, v, createTickLabel(v), 
-                        TextAnchor.TOP_CENTER, TextAnchor.CENTER, 0.0));
+                        textAnchor, TextAnchor.CENTER, 0.0));
             }
             // add minor ticks (for gridlines)
             double next = Math.pow(this.base, current 
@@ -534,8 +544,8 @@ public class LogAxis extends ValueAxis {
             for (int i = 1; i < this.minorTickCount; i++) {
                 double minorV = v + i * ((next - v) / this.minorTickCount);
                 if (range.contains(minorV)) {
-                    ticks.add(new NumberTick(TickType.MINOR, minorV, 
-                        "", TextAnchor.TOP_CENTER, TextAnchor.CENTER, 0.0));
+                    ticks.add(new NumberTick(TickType.MINOR, minorV, "", 
+                    		textAnchor, TextAnchor.CENTER, 0.0));
                 }
             }
             current = current + this.tickUnit.getSize();
@@ -559,6 +569,13 @@ public class LogAxis extends ValueAxis {
         List ticks = new ArrayList();
         Font tickLabelFont = getTickLabelFont();
         g2.setFont(tickLabelFont);
+    	TextAnchor textAnchor;
+        if (edge == RectangleEdge.RIGHT) {
+        	textAnchor = TextAnchor.CENTER_LEFT;
+        }
+        else {
+        	textAnchor = TextAnchor.CENTER_RIGHT;
+        }
         
         if (isAutoTickUnitSelection()) {
             selectAutoTickUnit(g2, dataArea, edge);
@@ -570,7 +587,7 @@ public class LogAxis extends ValueAxis {
             double v = calculateValue(current);
             if (range.contains(v)) {
                 ticks.add(new NumberTick(TickType.MINOR, v, createTickLabel(v), 
-                        TextAnchor.CENTER_RIGHT, TextAnchor.CENTER, 0.0));
+                        textAnchor, TextAnchor.CENTER, 0.0));
             }
             // add minor ticks (for gridlines)
             double next = Math.pow(this.base, current 
@@ -579,7 +596,7 @@ public class LogAxis extends ValueAxis {
                 double minorV = v + i * ((next - v) / this.minorTickCount);
                 if (range.contains(minorV)) {
                     ticks.add(new NumberTick(TickType.MINOR, minorV, "", 
-                            TextAnchor.CENTER_RIGHT, TextAnchor.CENTER, 0.0));
+                            textAnchor, TextAnchor.CENTER, 0.0));
                 }
             }
             current = current + this.tickUnit.getSize();
