@@ -1,5 +1,12 @@
 2008-02-15  David Gilbert  <david.gilbert@object-refinery.com>
 
+    Patch 1868745:
+    * source/org/jfree/chart/axis/LogAxis.java
+    (refreshTicksHorizontal): Adjust label anchor according to axis position,
+    (refreshTicksVertical): Likewise.
+
+2008-02-15  David Gilbert  <david.gilbert@object-refinery.com>
+
     Patch 1873328:
     * source/org/jfree/chart/util/RelativeDateFormat.java
     (showZeroHours): New field,
